Utilización de propios métodos de la clase Stream